scripts/k8s-istio/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dubbo-self  #名称
  labels:
    istio-injection: enabled  #注入istio
spec:
  finalizers:
  - kubernetes
