scripts/k8s-istio/base/provider.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-demo-provider-v2
  namespace: dubbo-self
  labels:
    app: dubbo-demo-provider
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo-demo-provider
      version: v2
  template:
    metadata:
      labels:
        app: dubbo-demo-provider
        version: v2
    spec:
      imagePullSecrets:
      - name: aliyun
      containers:
      - name: dubbo-demo-provider
        image: registry.cn-hangzhou.aliyuncs.com/sky11961677/dev:dubbo-provider-0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 20880
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
#        resources:
#          limits:
#            cpu: "500m"
#            memory: 1Gi
#          requests:
#            cpu: "500m"
#            memory: 1Gi
        livenessProbe: #容器存活探针
          httpGet: # 定义 http get 探针 ， 或 TCP Socket 或Exec
            path: /dubbo-demo-provider/actuator/health  # 指定路径和端口号
            port: 8080
          initialDelaySeconds: 50 # 初次探测延迟 50s
        readinessProbe: #就绪探针，防止pod启动后就暴露给service
          exec:
            command:
              - ls
              - /var/log
#        startupProbe:
#          httpGet:
#            path: /dubbo-demo-provider/actuator/health
#            port: http-health
#          failureThreshold: 30
#          initialDelaySeconds: 50
#          periodSeconds: 10
#          timeoutSeconds: 3
