scripts/k8s-istio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dubbo-demo-provider
  namespace: dubbo-self
spec:
  type: ClusterIP
  sessionAffinity: None #ClientIP # or None default , 保证一个 Client 的所有请求都只会落到同一个 Pod 上
  ports:
  - name: grpc-dubbo-demo-provider
    protocol: TCP
    port: 20880
    targetPort: 20880
  - name: http-dubbo-demo-provider
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: dubbo-demo-provider


---

apiVersion: v1
kind: Service
metadata:
  name: dubbo-demo-consumer
  namespace: dubbo-self
spec:
  type: ClusterIP
  sessionAffinity: None #ClientIP # or None default , 保证一个 Client 的所有请求都只会落到同一个 Pod 上
  ports:
    - name: http-dubbo-demo-consumer
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: dubbo-demo-consumer
