scripts/k8s-istio/base/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-demo-provider-subset
  namespace: dubbo-self
spec:
  host: dubbo-demo-provider
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN # Envoy load balancing strategy , RANDOM | ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-demo-consumer-subset
  namespace: dubbo-self
spec:
  host: dubbo-demo-consumer
  subsets:
    - name: v1
      labels:
        version: v1
