scripts/k8s-istio/base/egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dubbo-self-egress-gateway
  namespace: dubbo-self
spec:
  selector:
    istio: engressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.baidu.com"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-self-egress-gateway-vm
  namespace: dubbo-self
spec:
  hosts:
  - "www.baidu.com"
  gateways:
  - dubbo-self-egress-gateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: egress-gateway.istio-system.svc.cluster.local
  - match:
    - gateways:
      - egress-gateway.istio-system.svc.cluster.local
      port: 80
    route:
    - destination:
        host: www.baidu.com
