scripts/k8s-istio/base/gateway-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-self-gateway
#  namespace: dubbo-self  此处不添加，否则请求不通，第一次竟然请求通了，后期死活不通，需要研究研究istio envoy等网络相关
spec:
  hosts:
  - "172.18.30.246"
  gateways:
  - dubbo-self-gateway
  http:
  - match:
    - uri:
        exact: /hello
    - uri:
        prefix: /dubbo-demo-consumer
    route:
    - destination:
        port:
          number: 8081
        host: dubbo-demo-consumer.dubbo-self.svc.cluster.local
  - match:
    - uri:
        prefix: /dubbo-demo-provider
    route:
      - destination:
          port:
            number: 8080
          host: dubbo-demo-provider.dubbo-self.svc.cluster.local
