scripts/k8s-istio/base/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dubbo-self-ingress-gateway
  namespace: dubbo-self
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    #- "dubbo.self.example.com"
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-self-ingress-gateway-vm
  namespace: dubbo-self
spec:
  hosts:
  - "172.18.30.246"
  gateways:
  - dubbo-self-ingress-gateway
  http:
  - match:
    - uri:
        exact: /hello
    - uri:
        prefix: /dubbo-demo-consumer
    route:
    - destination:
        port:
          number: 8081
        host: dubbo-demo-consumer.dubbo-self.svc.cluster.local
        subset: v1  #指定到特定子集
  - match:
    - uri:
        prefix: /dubbo-demo-provider
    route:
    - destination:
        port:
          number: 8080
        host: dubbo-demo-provider.dubbo-self.svc.cluster.local
