scripts/k8s-istio/base/vm-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-demo-provider-vs
  namespace: dubbo-self
spec:
  hosts:
    - dubbo-demo-provider
  tcp:
    - route:
        - destination:
            host: dubbo-demo-provider
            port:
              number: 20880
            subset: v1
          weight: 50
        - destination:
            host: dubbo-demo-provider
            port:
              number: 20880
            subset: v2
          weight: 50
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-demo-provider-subset
  namespace: dubbo-self
spec:
  host: dubbo-demo-provider
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
